[package]
name = "CyanHai"
version = "0.0.1"
edition = "2021"
authors = ["IllusionAutumn <d161442079@163.com>"]
rust-version = "1.77.0"
homepage = "https://github.com/yIllusionSky/CyanHai"
readme = "README.md"
license = "GNU Affero General Public License v3.0"
description = "A decentralized chat program."


[dependencies]
